# arduino-basics

./: .gitignore  README.md  cargo.toml
avr-buzzer/: Cargo.toml
avr-buzzer/src/: main.rs  millis.rs
avr-countdown/: Cargo.toml
avr-countdown/src/: main.rs
avr-digitalin/: Cargo.toml
avr-digitalin/src/: main.rs
avr-fourleds/: Cargo.toml
avr-fourleds/src/: main.rs
avr-led-game/: Cargo.toml
avr-led-game/src/: main.rs
avr-volt-meter/: Cargo.toml
avr-volt-meter/src/: main.rs
tutorial2-digital-outputs/: Cargo.toml
tutorial2-digital-outputs/src/: main.rs
tutorial3-digital-input/: Cargo.toml
tutorial4-led-game/: Cargo.toml
tutorial5-voltage-meter/: Cargo.toml
tutorial6-buzzer-melody/: Cargo.toml
tutorial6-buzzer-melody/src/: main.rs
tutorial7-7segment-countdown/: Cargo.toml
