[package]
name = "tutorial6-buzzer-melody"
version = "0.1.0"
authors = ["Tristan Bull <tristan.m.bull@gmail.com>"]
edition = "2021"
license = "MIT"

[[bin]]
name = "tutorial6-buzzer-melody"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
pwm-pca9685 = "0.3.1"
infrared = "0.14.1"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "533159f6c6a508abe4ecec34bf5013d7a1eb0cf5"
features = ["arduino-nano"]

[dependencies.avr-device]
version = "0.4"
features = ["atmega328p", "rt"]

[dependencies.either]
version = "1.6.1"
default-features = false


