[package]
name = "tutorial7-7segment-countdown"
version = "0.1.0"
authors = ["Tristan Bull <tristan.m.bull@gmail.com>"]
edition = "2021"
license = "MIT"

[[bin]]
name = "tutorial7-7segment-countdown"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "4170a773d4d76cc93433d2455ed8b14e573ebe70"
features = ["arduino-nano"]


